# redis-prospecting-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: fit_analyzer.py
app/embedding/: chunker.py  embedder.py  vector_store.py
app/ingestion/: website_scraper.py
